# test_bot

./: comands.txt  main.py  makefile  pyproject.toml
bot/: __main__ .py  __main__.py  user_file.txt
bot/applications/: calculator.py
bot/handlers/: about_me.py  calculator.py  give_photo.py  old.py  open_github.py  quiz.py  responds_to_error_file_types.py  responds_to_file.py  rock_scissors_paper.py  say_hello.py  show_all_commands.py  text_commands.py
static/: comands.txt
