[project]
name = "bot"
version = "0.1.0"
description = "My first bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytelegrambotapi>=4.23.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.6.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9",
]

[tool.ruff]
line-length = 120
fix = true
